[project]
name = "bench-console"
version = "0.1.0"
description = "TUI for benchmarking local llama.cpp models with llama-benchy"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.60",
    "httpx>=0.27",
]

[project.scripts]
bench-console = "bench_console.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bench_console"]
